<resources>
    <string name="app_name">NavigationProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_image_1">Display Image 1</string>
    <string name="display_image_2">Display Image 2</string>
    <string name="display_image_3">Display Image 3</string>
    <string name="drill_droid">Drill Droid</string>
    <string name="wifi_droid">Wifi Droid</string>
    <string name="wrench_droid">Wrench Droid</string>
    <string name="droid">Droid</string>
</resources>